third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_full.exp

Diagnostics:
error: cannot copy mutable reference in local `x`
   ┌─ tests/reference-safety/v1-tests/dereference_full.move:12:17
   │
12 │         let y = copy x; // error in v2
   │                 ^^^^^^ copied here
